xee-xpath/tests/snapshots/logical__and_raises_forg0006_from_right_operand.snap
---
source: xee-xpath/tests/logical.rs
assertion_line: 58
expression: "run(\"true() and (1, 2)\")"
---
Err(
    SpannedError {
        error: FORG0006,
        span: Some(
            SourceSpan(
                11,
                16,
            ),
        ),
    },
)
