xee-xpath/tests/snapshots/logical__and_rejects_sequences_without_effective_boolean_value.snap
---
source: xee-xpath/tests/logical.rs
assertion_line: 44
expression: "run(\"(1, 2) and true()\")"
---
Err(
    SpannedError {
        error: FORG0006,
        span: Some(
            SourceSpan(
                0,
                5,
            ),
        ),
    },
)
