xee-xpath/tests/snapshots/logical__and_short_circuits_on_false.snap
---
source: xee-xpath/tests/logical.rs
assertion_line: 14
expression: "run(\"false() and error()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
