xee-xpath/tests/snapshots/logical__and_still_raises_from_right_operand.snap
---
source: xee-xpath/tests/logical.rs
assertion_line: 24
expression: "run(\"true() and error()\")"
---
Err(
    SpannedError {
        error: FOER0000,
        span: Some(
            SourceSpan(
                11,
                18,
            ),
        ),
    },
)
