xee-xpath/tests/snapshots/logical__and_takes_effective_boolean_values.snap
---
source: xee-xpath/tests/logical.rs
assertion_line: 34
expression: "run(r#\"1 and \"x\"\"#)"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    true,
                ),
            ),
        },
    ),
)
