xee-xpath/tests/snapshots/logical__mixed_precedence_short_circuits.snap
---
source: xee-xpath/tests/logical.rs
assertion_line: 75
expression: "run(\"true() or false() and error()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    true,
                ),
            ),
        },
    ),
)
