xee-xpath/tests/snapshots/logical__or_right_operand_effective_boolean_value.snap
---
source: xee-xpath/tests/logical.rs
assertion_line: 51
expression: "run(r#\"false() or \"x\"\"#)"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    true,
                ),
            ),
        },
    ),
)
