xee-xpath/tests/snapshots/logical__or_short_circuits_on_true.snap
---
source: xee-xpath/tests/logical.rs
assertion_line: 19
expression: "run(\"true() or error()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    true,
                ),
            ),
        },
    ),
)
