xee-xpath/tests/snapshots/logical__or_takes_effective_boolean_values.snap
---
source: xee-xpath/tests/logical.rs
assertion_line: 39
expression: "run(r#\"0 or \"\"\"#)"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
