xee-xpath/tests/snapshots/logical__three_term_and_chain_short_circuits.snap
---
source: xee-xpath/tests/logical.rs
assertion_line: 63
expression: "run(\"false() and error() and error()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
