xee-xpath/tests/snapshots/logical__three_term_or_chain_short_circuits.snap
---
source: xee-xpath/tests/logical.rs
assertion_line: 68
expression: "run(\"true() or error() or error()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    true,
                ),
            ),
        },
    ),
)
